--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -1,9 +1,11 @@
-fastapi
-uvicorn
-copilotkit
-langgraph
-langchain-google-genai
-google-generativeai
-python-dotenv
-requests
-pydantic
+google==3.0.0
+google-genai==1.28.0
+python-dotenv>=1.0.0,<2.0.0
+google-generativeai>=0.8.5,<0.9.0
+fastapi>=0.115.0,<0.116.0
+uvicorn>=0.35.0,<0.36.0
+langgraph==0.6.3
+langchain-core==0.3.72
+copilotkit==0.1.58
+langchain[google-genai]==0.3.26
+requests>=2.31.0,<3.0.0
